<resources>
    <string name="app_name" translatable="false">Yamblz.Project</string>

    <!--db-->
    <string name="db_name" translatable="false">cities.db</string>
    <integer name="db_version">1</integer>

    <!--network-->
    <string name="api_key" translatable="false">ddd67f907c6ad401a791a04e8e9d8b64</string>
    <string name="api_base_url" translatable="false">http://api.openweathermap.org/</string>

    <!--Navigation drawer strings-->
    <string name="navigation_cities_text">Places</string>
    <string name="navigation_settings_text">Settings</string>
    <string name="navigation_about_text">About</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="text_about_app">
        This training application is developed in the project \"Mobilization\"
    </string>

    <!--Preferences-->
    <string name="pref_update_key" translatable="false">pref_update_time</string>
    <string name="pref_update_time_title">Update frequency</string>
    <string name="pref_city_title">City</string>
    <string name="pref_city_key" translatable="false">cities</string>
    <string-array name="pref_update_time_entries">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_update_time_values" translatable="false">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>
    <string name="pref_update_time_default" translatable="false">180</string>

    <!--Shared Preferences keys-->
    <string name="city_id_key" translatable="false">city_id</string>
    <string name="city_name_key" translatable="false">city_name</string>
    <string name="country_key" translatable="false">country</string>

    <!--weather_formatting-->
    <string name="format_temp" translatable="false">%s°</string>
    <string name="format_pressure">%s kPa</string>
    <string name="format_humidity" translatable="false">%s %%</string>
    <string name="format_wind">%s m/s</string>

    <!--time-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_day_of_week" translatable="false">EEEE</string>

    <!--weather-->
    <string name="humidity_label">Humidity</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_label">Wind</string>
    <string name="morning_label">Morning</string>
    <string name="day_label">Day</string>
    <string name="evening_label">Evening</string>
    <string name="night_label">Night</string>

    <!--City Choosing-->
    <string name="navigation_city_selection">City selection</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="no_cities_found">Did not match any cities</string>
    <string name="error_no_data">Failed to retrieve data</string>
    <string name="no_city_added">No city added</string>

    <bool name="isTablet">false</bool>

    <string name="yandex_logo_content_descr">Yandex Logo</string>

</resources>
