<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_city"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/AppTheme.ToolbarTheme">

        <EditText
            android:id="@+id/input_city_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name"
            style="@style/AppTheme.InputCityTheme"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cities_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/AppTheme.RecyclerViewTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_city"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cities_found"
        style="@style/CitiesTextViewTheme"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loading_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/yandex_logo"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_data_error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_data"
        style="@style/CitiesTextViewTheme"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/yandex_logo"
        android:layout_width="@dimen/yandex_logo_width"
        android:layout_height="wrap_content"
        android:src="@drawable/yandex_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>