<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/arrow_back_imageview"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_back"
        android:background="@drawable/transparent_selector"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/input_city_edittext"
        app:layout_constraintTop_toTopOf="@+id/input_city_edittext"
        app:layout_constraintBottom_toBottomOf="@+id/input_city_edittext" />

    <EditText
        android:id="@+id/input_city_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_city_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/arrow_back_imageview"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/edittext_background"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="flagNoExtractUi|actionDone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cities_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_city_edittext"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_cities_found"
        style="@style/CitiesTextViewTheme"
        app:layout_constraintTop_toBottomOf="@+id/input_city_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loading_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_city_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/yandex_logo"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_data_error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_data"
        style="@style/CitiesTextViewTheme"
        app:layout_constraintTop_toBottomOf="@+id/input_city_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/yandex_logo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/yandex_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>